syntax = "proto3";
package nyum;

// UserRegistration messages
message UserRegistrationRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message UserRegistrationResponse {
  string message = 1;
  bool success = 2;
}

// GetUser messages
message UserRequest {
  string user_id = 1;
}

message UserResponse {
  string user_id = 1;
  string username = 2;
  string email = 3;
  string created_at = 4;
  string updated_at = 5;
}

// UpdateUser messages
message UserUpdateRequest {
  string user_id = 1;
  optional string username = 2;
  optional string email = 3;
  optional string password = 4;
}

message UserUpdateResponse {
  string message = 1;
  bool success = 2;
}

// DeleteUser messages
message UserDeleteRequest {
  string user_id = 1;
}

message UserDeleteResponse {
  string message = 1;
  bool success = 2;
}